# FinUQ

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  run.sh  setup.sh
data/: get_square_mat.py
include/cpp/: backward_error.hpp  bea.hpp  boundary_value_prob.hpp  bounds.hpp  config.hpp  definition.hpp  distribution.hpp  dot_product.hpp  ebwd.hpp  efwd.hpp  forward_error.hpp  gamma.hpp  matrix_vector.hpp  prob_model.hpp  probability.hpp  utils.hpp
include/cuda/: addition.cuh  boundary_value_prob_cuda.cuh  checks.cuh  convert.cuh  copy.cuh  dotProduct.cuh  dot_product_cuda.cuh  matVecMult.cuh  matrix_vector_cuda.cuh  ode.cuh  rounding_error_model.cuh  sampler.cuh  utils_cuda.cuh
lib/cnpy/: README.md  cnpy.cpp  cnpy.h  example1.cpp  npz2mat
modules/: setup.py
modules/operand/: operand.py
scripts/: get_square_mat.py  journal.mplstyle  model_verification.py  rounding_error_model.py
scripts/bvp/: plot.py
scripts/compare_gamma/: plot.py
scripts/dot_product/: plot.py
scripts/matrix_market/: plot.py
src/: MLMC.py
src/addition/: DeltaOverload.m  compare_cdf.m  delta_overload_scalar_addition.m  sample_rounding_error.m  scalar_addition.m  scalar_addition_lower_space.m
src/bernstein_vs_hoeffding/: comp_bernstein_prob.m  comp_hoeffding_prob.m  compare_data.m  run.m  void.m
src/cpp/: backward_error.cpp  boundary_value_prob.cpp  bounds.cpp  distribution.cpp  dot_product.cpp  ebwd.cpp  efwd.cpp  forward_error.cpp  gamma.cpp  main.cpp  matrix_vector.cpp  prob_model.cpp  probability.cpp  utils.cpp
src/cuda/: addition.cu  boundary_value_prob_cuda.cu  convert.cu  copy.cu  dotProduct.cu  dot_product_cuda.cu  matVecMult.cu  matrix_vector_cuda.cu  ode.cu  rounding_error_model.cu  sampler.cu  utils_cuda.cu
src/dot_product/backward_error_vs_vector_size/: compare_data.m  run.m  (+1 more)
src/multiplication/: DeltaOverload.m  compare_cdf.m  scalar_product.m  scalar_product_lower_space.m
tests/: test_U.mat  test_Z.mat  test_operand.py
(+48 files in other folders)
